[project]
name = "EA_LMStudio"
description = "A custom node for LM Studio integration into ComfyUI."
version = "1.2.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/EnragedAntelope/EA_LMStudio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "EA_LMStudio"
Icon = ""
